change server and add xcode project

--- a/webapp/www/index.html
+++ b/webapp/www/index.html
@@ -39,6 +39,7 @@
             <ion-item ng-repeat="movie in movies">
                 <div class="row">
                     <div class="col col-20">
+                        <img src="{{movie.poster}}" class="poster">
                     </div>
                     <div class="col col-60">
                         {{ movie.title }}
