--- a/webapp/www/index.html
+++ b/webapp/www/index.html
@@ -33,7 +33,9 @@
     <ion-pane>
       <ion-header-bar class="bar-positive">
         <h1 class="title">Moviebuddy</h1>
-        <button class="button button-clear" ng-click="add()">+</button>
+        <button class="button button-clear" ng-click="add()">
+            <i class="icon ion-android-add"></i>
+          </button>
 
       </ion-header-bar>
       <ion-content class="background">
@@ -46,7 +48,7 @@
         </div>
         <ion-list>
             <div class="item item-divider">
-             Movies
+             Filmer
             </div>
             <ion-item ng-repeat="movie in movies | orderBy:'-rating'" class="item item-thumbnail-left">
                     <img ng-src="{{movie.poster}}" class="poster margin-left">
