add modal for new movie

--- a/webapp/www/index.html
+++ b/webapp/www/index.html
@@ -33,7 +33,7 @@
     <ion-pane>
       <ion-header-bar class="bar-positive">
         <h1 class="title">Moviebuddy</h1>
-        <button class="button button-clear" ng-click="add()">
+        <button class="button button-clear" ng-click="openModal()">
             <i class="icon ion-android-add"></i>
           </button>
 
