--- a/webapp/www/index.html
+++ b/webapp/www/index.html
@@ -34,7 +34,7 @@
       <ion-header-bar class="bar-positive">
         <h1 class="title">Moviebuddy</h1>
         <button class="button button-clear" ng-click="openModal()">
-            <i class="icon ion-android-add"></i>
+            <i class="icon ion-ios-plus-empty"></i>
           </button>
 
       </ion-header-bar>
